Exposing Rollup.CACHED_APEX_OPERATIONS to be able to act on the map in integration tests

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -52,6 +52,7 @@ global without sharing virtual class Rollup {
 
   // Lazy-load section. Lots of additional lines, but with the benefit that we keep the heap size down for instances of Rollup
   // that never reference these variables
+  @TestVisible
   private static final Map<SObjectType, Set<TriggerOperation>> CACHED_APEX_OPERATIONS {
     get {
       if (CACHED_APEX_OPERATIONS == null) {
